# 23-freeform-lens-tracer

./: CMakeLists.txt  README.md  build.bat  resources.qrc
src/: GLCanvas.cpp  GLCanvas.h  MainWindow.cpp  MainWindow.h  main.cpp
src/NURBS/: NURBSSurface.cpp  NURBSSurface.h  NURBSTessellator.cpp  NURBSTessellator.h
src/RayTracer/: OpticalMath.cpp  OpticalMath.h  RayTracerEngine.cpp  RayTracerEngine.h
src/Renderer/: Camera.cpp  Camera.h  GLRenderer.cpp  GLRenderer.h
src/shaders/: light.frag  light.vert  ray.frag  ray.vert  surface.frag  surface.vert
